--- a/lc101/Assignment6/orbit-report/src/app/app.component.html
+++ b/lc101/Assignment6/orbit-report/src/app/app.component.html
@@ -19,5 +19,7 @@
 </ul>
 -->
 
-<app-orbit-list></app-orbit-list>
+<!--<app-orbit-list></app-orbit-list>-->
+
+<app-orbit-list [satellites]="sourceList"></app-orbit-list>
 
